--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -3,5 +3,7 @@
   "spellcheck": true,
   "showFrontmatter": true,
   "alwaysUpdateLinks": true,
-  "fileSortOrder": "alphabetical"
+  "fileSortOrder": "alphabetical",
+  "strictLineBreaks": false,
+  "readableLineLength": true
 }
