--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,7 +4,7 @@
     "type": "split",
     "children": [
       {
-        "id": "c2b4d06f0b88af8d",
+        "id": "e6e30d39fb2f9efe",
         "type": "leaf",
         "state": {
           "type": "markdown",
@@ -105,17 +105,17 @@
     "direction": "horizontal",
     "width": 313
   },
-  "active": "c2b4d06f0b88af8d",
+  "active": "e6e30d39fb2f9efe",
   "lastOpenFiles": [
+    "Drink me.md",
+    "授权证明1.png",
+    "授权证明2.png",
     "“Drink me”.md",
     "**Library.md",
     "Nell Nell/吸男品质.md",
     "Nell Nell/初心.md",
     "Nell Nell/何谓可爱.md",
     "Nell Nell/今生之意.md",
-    "Nell Nell/丁克.md",
-    "John Hexa/性感.md",
-    "John Hexa/性.md",
-    "John Hexa/性感男人.md"
+    "Nell Nell/丁克.md"
   ]
 }
