--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Drink me.md",
+            "file": "John Hexa/无错.md",
             "mode": "source"
           }
         }
@@ -39,7 +39,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "烟雨行舟",
+                "query": "酒神",
                 "matchingCase": false,
                 "explainSearch": true,
                 "collapseAll": true,
@@ -77,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Drink me.md",
+                "file": "John Hexa/无错.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -109,15 +109,15 @@
   },
   "active": "0392a2034c767c29",
   "lastOpenFiles": [
-    "Drink me.md",
-    "自律真的会获得自由吗？.md",
-    "Nell Nell/英雄 1.md",
-    "John Hexa/第一关.md",
-    "John Hexa/认错.md",
-    "John Hexa/钱.md",
-    "John Hexa/是非界定.md",
-    "John Hexa/感谢的必要.md",
-    "John Hexa/底层出身.md",
+    "John Hexa/举报作弊.md",
+    "John Hexa/无错.md",
+    "John Hexa/慎终.md",
+    "John Hexa/拜登之胜.md",
+    "Nell Nell/拜登之胜.md",
+    "John Hexa/对事不对人.md",
+    "John Hexa/对事与对人.md",
+    "John Hexa/信仰.md",
+    "John Hexa/人性本质.md",
     "John Hexa/休息.md"
   ]
 }
