--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "0392a2034c767c29",
+        "id": "1518d78493514c53",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "John Hexa/无错.md",
+            "file": "Drink me.md",
             "mode": "source"
           }
         }
@@ -39,7 +39,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "酒神",
+                "query": "打磨",
                 "matchingCase": false,
                 "explainSearch": true,
                 "collapseAll": true,
@@ -56,8 +56,7 @@
               "state": {}
             }
           }
-        ],
-        "currentTab": 1
+        ]
       }
     ],
     "direction": "horizontal",
@@ -77,7 +76,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "John Hexa/无错.md",
+                "file": "Drink me.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -107,17 +106,17 @@
     "width": 292.4558410644531,
     "collapsed": true
   },
-  "active": "0392a2034c767c29",
+  "active": "1518d78493514c53",
   "lastOpenFiles": [
-    "John Hexa/举报作弊.md",
-    "John Hexa/无错.md",
-    "John Hexa/慎终.md",
-    "John Hexa/拜登之胜.md",
-    "Nell Nell/拜登之胜.md",
-    "John Hexa/对事不对人.md",
-    "John Hexa/对事与对人.md",
-    "John Hexa/信仰.md",
-    "John Hexa/人性本质.md",
-    "John Hexa/休息.md"
+    "Drink me.md",
+    "皆有其时.md",
+    "穿越幽谷.md",
+    "热烈.md",
+    "战斗民族.md",
+    "核潜艇.md",
+    "键政.md",
+    "John Hexa/键政.md",
+    "木秀于林.md",
+    "世俗.md"
   ]
 }
