--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,7 +4,7 @@
     "type": "split",
     "children": [
       {
-        "id": "faba5a5955bad751",
+        "id": "3fcfa28e6b0a846b",
         "type": "leaf",
         "state": {
           "type": "markdown",
@@ -39,7 +39,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "你愿意吗",
+                "query": "",
                 "matchingCase": false,
                 "explainSearch": true,
                 "collapseAll": true,
@@ -106,17 +106,17 @@
     "width": 292.4558410644531,
     "collapsed": true
   },
-  "active": "faba5a5955bad751",
+  "active": "3fcfa28e6b0a846b",
   "lastOpenFiles": [
     "Drink me.md",
-    "John Hexa/日本沉没.md",
-    "John Hexa/Yemen.md",
-    "John Hexa/爱心饭.md",
-    "John Hexa/公平因果.md",
-    "John Hexa/Another Way.md",
-    "John Hexa/快餐式 1.md",
-    "John Hexa/溢美之词.md",
-    "John Hexa/毒圈.md",
-    "John Hexa/成功秘诀.md"
+    "Nell Nell/企业家精神.md",
+    "John Hexa/高贵的敌人.md",
+    "John Hexa/跟对人.md",
+    "John Hexa/壁厚.md",
+    "John Hexa/稻草.md",
+    "John Hexa/多加小心.md",
+    "John Hexa/循序渐进.md",
+    "John Hexa/基本造型能力.md",
+    "John Hexa/辩论.md"
   ]
 }
