--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Drink me.md",
+            "file": "John Hexa/爱国爱党.md",
             "mode": "source"
           }
         }
@@ -56,7 +56,8 @@
               "state": {}
             }
           }
-        ]
+        ],
+        "currentTab": 1
       }
     ],
     "direction": "horizontal",
@@ -76,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Drink me.md",
+                "file": "John Hexa/爱国爱党.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -108,6 +109,8 @@
   },
   "active": "3fcfa28e6b0a846b",
   "lastOpenFiles": [
+    "John Hexa/爱国爱党.md",
+    "沙海拾金/爱国爱党.jpeg",
     "Drink me.md",
     "Nell Nell/企业家精神.md",
     "John Hexa/高贵的敌人.md",
@@ -115,8 +118,6 @@
     "John Hexa/壁厚.md",
     "John Hexa/稻草.md",
     "John Hexa/多加小心.md",
-    "John Hexa/循序渐进.md",
-    "John Hexa/基本造型能力.md",
-    "John Hexa/辩论.md"
+    "John Hexa/循序渐进.md"
   ]
 }
