--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,12 +4,13 @@
     "type": "split",
     "children": [
       {
-        "id": "69b63af081748692",
+        "id": "b350f58e0b0cdfc3",
         "type": "leaf",
         "state": {
-          "type": "image",
+          "type": "markdown",
           "state": {
-            "file": "沙海拾金/“宏大叙事”.PNG"
+            "file": "John Hexa/钉钉.md",
+            "mode": "source"
           }
         }
       }
@@ -38,7 +39,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "离开知乎",
+                "query": "科技的上",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -75,7 +76,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "沙海拾金/“宏大叙事”.PNG",
+                "file": "John Hexa/钉钉.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -105,17 +106,17 @@
     "width": 292.4558410644531,
     "collapsed": true
   },
-  "active": "69b63af081748692",
+  "active": "b350f58e0b0cdfc3",
   "lastOpenFiles": [
-    "沙海拾金/“宏大叙事”.PNG",
-    "沙海拾金/拒绝侮辱.PNG",
-    "John Hexa/致读者 - 之五.md",
-    "John Hexa/MMA.md",
-    "Nell Nell/为何对你好.md",
-    "Nell Nell/丧的本质.md",
-    "沙海拾金/凡事盼望.PNG",
+    "John Hexa/钉钉.md",
+    "John Hexa/猫山王.md",
+    "John Hexa/弹道学.md",
+    "John Hexa/快餐式.md",
+    "John Hexa/元宇宙.md",
     "Drink me.md",
-    "John Hexa/拿身体换.md",
-    "John Hexa/闲聊 1.md"
+    "摘抄本/生词本.md",
+    "John Hexa/诚实.md",
+    "John Hexa/性侵危机.md",
+    "John Hexa/科技上限.md"
   ]
 }
