--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "沙海拾金/灵魂不灭.md",
+            "file": "摘抄本/摘抄 - 励志金句.md",
             "mode": "source"
           }
         }
@@ -56,8 +56,7 @@
               "state": {}
             }
           }
-        ],
-        "currentTab": 1
+        ]
       }
     ],
     "direction": "horizontal",
@@ -77,7 +76,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "沙海拾金/灵魂不灭.md",
+                "file": "摘抄本/摘抄 - 励志金句.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -108,15 +107,15 @@
   },
   "active": "0e3784c4dac767a2",
   "lastOpenFiles": [
-    "沙海拾金/灵魂不灭.md",
-    "沙海拾金/新神学1.jpeg",
-    "John Hexa/圣经 - Bible.md",
-    "John Hexa/咋知道的.md",
-    "Nell Nell/《圣经》vs. 历史.md",
-    "John Hexa/生离死别.md",
-    "John Hexa/Sin.md",
-    "沙海拾金/Sin 1.jpg",
-    "沙海拾金/新神学2.jpg",
-    "沙海拾金/sin 2.jpg"
+    "摘抄本/摘抄 - 励志金句.md",
+    "Drink me.md",
+    "John Hexa/后悔的真相.md",
+    "John Hexa/综合国力.md",
+    "John Hexa/道德与伦理.md",
+    "John Hexa/打黄盖.md",
+    "John Hexa/笑傲江湖.md",
+    "John Hexa/知己知彼.md",
+    "John Hexa/大成就者.md",
+    "John Hexa/合理 1.md"
   ]
 }
