--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -1,17 +1,14 @@
 {
   "main": {
-    "id": "96272e1221103cae",
+    "id": "7b793816d23c7d05",
     "type": "split",
     "children": [
       {
-        "id": "069f39c9d72dcd40",
+        "id": "11f2161824df1b0a",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "Drink me.md",
-            "mode": "source"
-          }
+          "type": "empty",
+          "state": {}
         }
       }
     ],
@@ -39,7 +36,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "",
+                "query": "安全感",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -56,12 +53,11 @@
               "state": {}
             }
           }
-        ],
-        "currentTab": 1
+        ]
       }
     ],
     "direction": "horizontal",
-    "width": 255
+    "width": 238.5
   },
   "right": {
     "id": "667d5636990656b4",
@@ -77,7 +73,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Drink me.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -107,17 +102,17 @@
     "width": 249.5,
     "collapsed": true
   },
-  "active": "069f39c9d72dcd40",
+  "active": "11f2161824df1b0a",
   "lastOpenFiles": [
-    "Drink me.md",
-    "Nell Nell/独立女性.md",
-    "John Hexa/苦难的价值.md",
-    "John Hexa/群居问题.md",
-    "Nell Nell/元宇宙.md",
-    "John Hexa/塑料膜.md",
-    "John Hexa/壁厚.md",
-    "John Hexa/大实话.md",
-    "John Hexa/肇因与动因.md",
-    "John Hexa/进步退步.md"
+    "摘抄本/JH文章速读/摘抄 - 财富观.md",
+    "摘抄本/JH文章速读/摘抄 - 致读者 - 之一.md",
+    "摘抄本/JH文章速读/摘抄 - 立场分歧.md",
+    "摘抄本/JH文章速读/摘抄 - 离婚要事.md",
+    "摘抄本/JH文章速读/摘抄 - 求学.md",
+    "摘抄本/JH文章速读/摘抄 - 悲观与乐观.md",
+    "摘抄本/JH文章速读/摘抄 - 对人类失望.md",
+    "摘抄本/JH文章速读/摘抄 - 安全感.md",
+    "摘抄本/JH文章速读/摘抄 - 咨询师.md",
+    "摘抄本/JH文章速读/摘抄 - 卑微.md"
   ]
 }
