--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,7 +4,7 @@
     "type": "split",
     "children": [
       {
-        "id": "11f2161824df1b0a",
+        "id": "0e8ea4e0bc9c0f8d",
         "type": "leaf",
         "state": {
           "type": "empty",
@@ -36,7 +36,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "安全感",
+                "query": "安息",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -53,7 +53,8 @@
               "state": {}
             }
           }
-        ]
+        ],
+        "currentTab": 1
       }
     ],
     "direction": "horizontal",
@@ -102,17 +103,17 @@
     "width": 249.5,
     "collapsed": true
   },
-  "active": "11f2161824df1b0a",
+  "active": "0e8ea4e0bc9c0f8d",
   "lastOpenFiles": [
-    "摘抄本/JH文章速读/摘抄 - 财富观.md",
-    "摘抄本/JH文章速读/摘抄 - 致读者 - 之一.md",
-    "摘抄本/JH文章速读/摘抄 - 立场分歧.md",
-    "摘抄本/JH文章速读/摘抄 - 离婚要事.md",
-    "摘抄本/JH文章速读/摘抄 - 求学.md",
-    "摘抄本/JH文章速读/摘抄 - 悲观与乐观.md",
-    "摘抄本/JH文章速读/摘抄 - 对人类失望.md",
-    "摘抄本/JH文章速读/摘抄 - 安全感.md",
-    "摘抄本/JH文章速读/摘抄 - 咨询师.md",
-    "摘抄本/JH文章速读/摘抄 - 卑微.md"
+    "沙海拾金/十万火急1.jpeg",
+    "沙海拾金/事实判断.png",
+    "沙海拾金/奇迹展示.png",
+    "沙海拾金/不抱怨.jpeg",
+    "沙海拾金/交流基线.jpeg",
+    "摘抄本/JH文章速读/*摘抄 - 与世界为敌.md",
+    "Drink me.md",
+    "美国是人情社会吗？为什么？.md",
+    "Nell Nell/芥菜种.md",
+    "Nell Nell/独立女性.md"
   ]
 }
