--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,7 +4,7 @@
     "type": "split",
     "children": [
       {
-        "id": "520a5df16f8b5741",
+        "id": "4548277d986b2b28",
         "type": "leaf",
         "state": {
           "type": "empty",
@@ -36,7 +36,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "安息",
+                "query": "",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -53,7 +53,8 @@
               "state": {}
             }
           }
-        ]
+        ],
+        "currentTab": 1
       }
     ],
     "direction": "horizontal",
@@ -102,16 +103,17 @@
     "width": 249.5,
     "collapsed": true
   },
-  "active": "520a5df16f8b5741",
+  "active": "4548277d986b2b28",
   "lastOpenFiles": [
-    "摘抄本/JH文章速读/摘抄 - 不可证伪.md",
-    "摘抄本/JH文章速读/摘抄 - 不可证伪1.md",
-    "摘抄本/JH文章速读/摘抄 - 不紧张.md",
-    "摘抄本/JH文章速读/摘抄 - 不配被爱.md",
-    "摘抄本/JH文章速读/摘抄 - 不配被爱.md",
-    "摘抄本/JH文章速读/摘抄 - 不原谅的诅咒.md",
+    "摘抄本/JH文章速读/摘抄 - 离婚要事.md",
+    "摘抄本/JH文章速读/摘抄 - 安全感.md",
+    "摘抄本/JH文章速读/摘抄 - 乱伦.md",
+    "摘抄本/JH文章速读/摘抄 - 与世界为敌.md",
+    "摘抄本/JH文章速读/摘抄 - 不论大事.md",
     "摘抄本/JH文章速读/摘抄 - 不卑不亢.md",
-    "摘抄本/JH文章速读/摘抄 - 不卑不亢1.md",
-    "摘抄本/JH文章速读/摘抄 - 不卑不亢.md"
+    "摘抄本/JH文章速读/摘抄 - 下属不满.md",
+    "摘抄本/JH文章速读/摘抄 - 下药.md",
+    "摘抄本/JH文章速读/摘抄 - 专职主内.md",
+    "摘抄本/JH文章速读/摘抄 - 世界史.md"
   ]
 }
