--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,7 +4,7 @@
     "type": "split",
     "children": [
       {
-        "id": "4548277d986b2b28",
+        "id": "bbe6d4582e4d6a9e",
         "type": "leaf",
         "state": {
           "type": "empty",
@@ -53,8 +53,7 @@
               "state": {}
             }
           }
-        ],
-        "currentTab": 1
+        ]
       }
     ],
     "direction": "horizontal",
@@ -103,17 +102,17 @@
     "width": 249.5,
     "collapsed": true
   },
-  "active": "4548277d986b2b28",
+  "active": "bbe6d4582e4d6a9e",
   "lastOpenFiles": [
-    "摘抄本/JH文章速读/摘抄 - 离婚要事.md",
-    "摘抄本/JH文章速读/摘抄 - 安全感.md",
-    "摘抄本/JH文章速读/摘抄 - 乱伦.md",
-    "摘抄本/JH文章速读/摘抄 - 与世界为敌.md",
-    "摘抄本/JH文章速读/摘抄 - 不论大事.md",
-    "摘抄本/JH文章速读/摘抄 - 不卑不亢.md",
-    "摘抄本/JH文章速读/摘抄 - 下属不满.md",
-    "摘抄本/JH文章速读/摘抄 - 下药.md",
-    "摘抄本/JH文章速读/摘抄 - 专职主内.md",
-    "摘抄本/JH文章速读/摘抄 - 世界史.md"
+    "摘抄本/JH文章速读/摘抄 - 中国式反同化.md",
+    "John Hexa/中国教会.md",
+    "摘抄本/JH文章速读/摘抄 - 中国宗教的问题.md",
+    "John Hexa/中国式反同化.md",
+    "John Hexa/中国宗教的问题.md",
+    "John Hexa/中国小确幸.md",
+    "John Hexa/中国基建.md",
+    "摘抄本/JH文章速读/待摘抄 - 两难.md",
+    "摘抄本/JH文章速读/待摘抄 - 中伊25年协议.md",
+    "摘抄本/JH文章速读/摘抄 - 严刑拷打.md"
   ]
 }
