--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -108,14 +108,14 @@
   "active": "dec42f83aac0a5aa",
   "lastOpenFiles": [
     "Drink me.md",
-    "Anonymity/04 - 社科答集/合理2.md",
-    "Anonymity/03 - 第一性/合理1.md",
-    "摘抄本/摘抄 - 励志金句.md",
-    "摘抄本/摘抄 - 绝妙比喻.md",
-    "Nell Nell/其它/无用之用.md",
-    "沙海拾金/无用之用.jpg",
-    "Anonymity/03 - 第一性/逃避伤害.md",
-    "Anonymity/01 - 家族答集/不惊不怒.md",
-    "沙海拾金/尽力完美.jpg"
+    "Anonymity/01 - 家族答集/尊重的实践.md",
+    "沙海拾金/交流.jpeg",
+    "沙海拾金/交流基线.jpeg",
+    "沙海拾金/人类共性1.JPEG",
+    "沙海拾金/人类共性3.jpg",
+    "沙海拾金/天使1.JPEG",
+    "沙海拾金/天使2.JPEG",
+    "沙海拾金/天使3.JPEG",
+    "沙海拾金/天使4.jpg"
   ]
 }
