--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,22 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "08ad8cba06639f01",
-        "type": "leaf",
-        "state": {
-          "type": "image",
-          "state": {
-            "file": "沙海拾金/礼貌与尊重3.jpg"
-          }
-        }
-      },
-      {
-        "id": "37d36aa648bc617c",
+        "id": "b8c12332eaa612bf",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Anonymity/01 - 家族答集/尊重的实践.md",
+            "file": "摘抄本/句子摘录.md",
             "mode": "source"
           }
         }
@@ -49,7 +39,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "",
+                "query": "挂了",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -66,8 +56,7 @@
               "state": {}
             }
           }
-        ],
-        "currentTab": 1
+        ]
       }
     ],
     "direction": "horizontal",
@@ -87,7 +76,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "沙海拾金/礼貌与尊重3.jpg",
+                "file": "摘抄本/句子摘录.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -109,23 +98,24 @@
               }
             }
           }
-        ]
+        ],
+        "currentTab": 1
       }
     ],
     "direction": "horizontal",
     "width": 157.5
   },
-  "active": "08ad8cba06639f01",
+  "active": "b8c12332eaa612bf",
   "lastOpenFiles": [
-    "沙海拾金/礼貌与尊重3.jpg",
-    "Anonymity/01 - 家族答集/尊重的实践.md",
-    "沙海拾金/礼貌与尊重4.JPEG",
-    "沙海拾金/礼貌与尊重2.jpg",
-    "沙海拾金/礼貌与尊重1.jpeg",
-    "沙海拾金/现实.JPEG",
-    "沙海拾金/狠厉2.jpg",
-    "沙海拾金/狠厉1.jpg",
-    "沙海拾金/尊重的实践4.jpg",
-    "沙海拾金/尊重的实践3.jpg"
+    "摘抄本/句子摘录.md",
+    "README.md",
+    "Anonymity/04 - 社科答集/如何看待拜登将派前官员代表团突访台湾，专家评「临时组队，想安抚恐慌情绪」？美方此举释放了哪些信号？.md",
+    "Nell Nell/待分类/救.md",
+    "Anonymity/04 - 社科答集/5亿.md",
+    "Anonymity/07 - 军事技术与艺术/俄乌战争.md",
+    "Anonymity/08 - 文艺答集/兔子狼.md",
+    "Anonymity/07 - 军事技术与艺术/军援.md",
+    "Anonymity/07 - 军事技术与艺术/到底在争夺什么.md",
+    "Anonymity/07 - 军事技术与艺术/泽连斯基.md"
   ]
 }
